# wodtrackr/serializers.py
@@ -285,6 +285,9 @@ class ExerciseProgramSerializer(serializers.ModelSerializer):
             'id',
             'name',
             'description',
+            'category',
+            'equipment',
+            'primary_muscle_group',
             'is_public',
             'created_by',
             'created_by_username',
